Sorted out grid issues when viewing on smaller screens, edited styling of cookie notification

--- a/src/scss/_cookie-notification.scss
+++ b/src/scss/_cookie-notification.scss
@@ -3,7 +3,7 @@
   box-shadow: $upperBoxShadow;
   bottom: 0;
   left: 0;
-  padding: 1rem;
+  padding: 0 1rem 1rem;
   position: fixed;
   text-align: center;
   width: 100%;
@@ -11,6 +11,7 @@
   @media #{$screenMedium}, #{$screenLarge} {
     justify-content: center;
     display: flex;
+    padding: 1rem;
 
     .button {
       margin-left: 2rem;
