--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -11,7 +11,6 @@
   position: fixed;
   top: 0;
   transform: translateY(-100vh);
-  transition: transform 900ms ease-in-out;
   width: 100vw;
   z-index: 105; // mast-head has z-index 100
 
@@ -21,6 +20,11 @@
 
   &:target {
     transform: translateY(0);
+    transition: transform 900ms ease-in-out;
+  }
+
+  .fixed-head:target ~ & {
+    transition: transform 900ms ease-in-out;
   }
 
   .menu {
